fixed alignment, javascript, organization

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 .equalizer-bar {
   color: #fff;
   width: 25px;
-  height: 100%;
+  height: 200px;
   display: flex;
   overflow: visible;
   position: relative;
@@ -38,17 +38,18 @@
   justify-content: space-evenly;
 }
 
-.equalizer-bar > span {
+.equalizer-bar > div {
+  left: 8px;
   bottom: 0;
-  left: 20px;
-  width: 50px;
-  text-align: left;
+  width: auto;
+  display: flex;
   overflow: visible;
   position: relative;
+  text-align: center;
+  flex-direction: column;
 }
 
 .bar {
   height: 75%;
   display: flex;
 }
-
